@@ -7,6 +7,7 @@ import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InOrder;
+import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.ImportAutoConfiguration;
@@ -20,7 +21,11 @@ import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
 import uk.gov.hmcts.reform.hmc.ApplicationParams;
 import uk.gov.hmcts.reform.hmc.TestIdamConfiguration;
+import uk.gov.hmcts.reform.hmc.client.datastore.model.DataStoreCaseDetails;
 import uk.gov.hmcts.reform.hmc.config.SecurityConfiguration;
+import uk.gov.hmcts.reform.hmc.config.UrlManager;
+import uk.gov.hmcts.reform.hmc.data.SecurityUtils;
+import uk.gov.hmcts.reform.hmc.domain.model.enums.HearingStatus;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.PutHearingStatus;
 import uk.gov.hmcts.reform.hmc.model.CaseDetails;
 import uk.gov.hmcts.reform.hmc.model.DeleteHearingRequest;
@@ -32,12 +37,13 @@ import uk.gov.hmcts.reform.hmc.model.UpdateHearingRequest;
 import uk.gov.hmcts.reform.hmc.security.JwtGrantedAuthoritiesConverter;
 import uk.gov.hmcts.reform.hmc.service.AccessControlService;
 import uk.gov.hmcts.reform.hmc.service.HearingManagementService;
+import uk.gov.hmcts.reform.hmc.service.common.HearingStatusAuditService;
+import uk.gov.hmcts.reform.hmc.service.common.OverrideAuditService;
 import uk.gov.hmcts.reform.hmc.utils.TestingUtil;
 
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.Mockito.doReturn;
@@ -70,11 +76,29 @@ class HearingManagementControllerTest {
     private AccessControlService accessControlService;
 
     @MockBean
-    ApplicationParams applicationParams;
+    private ApplicationParams applicationParams;
+
+    @MockBean
+    private UrlManager urlManager;
+
+    @MockBean
+    private OverrideAuditService overrideAuditService;
+
+    @Mock
+    HearingStatusAuditService hearingStatusAuditService;
+
+    @MockBean
+    SecurityUtils securityUtils;
+
+    private static final String CLIENT_S2S_TOKEN = "xui_webapp";
 
     @BeforeEach
     public void setUp() {
         mockMvc = MockMvcBuilders.webAppContextSetup(webApplicationContext).build();
+        doReturn("xui_webapp").when(securityUtils)
+            .getServiceNameFromS2SToken(any());
+        hearingStatusAuditService.saveAuditTriageDetailsWithCreatedDate(any(),any(),any(),any(),any(),any(),any());
+        hearingStatusAuditService.saveAuditTriageDetailsWithUpdatedDate(any(),any(),any(),any(),any(),any(),any());
     }
 
     @Nested
@@ -88,13 +112,15 @@ class HearingManagementControllerTest {
             hearingRequest.setHearingDetails(null);
 
             HearingResponse hearingResponse = generateHearingResponse();
-            when(hearingManagementService.saveHearingRequest(hearingRequest, null)).thenReturn(hearingResponse);
+            when(hearingManagementService.saveHearingRequest(hearingRequest, null, CLIENT_S2S_TOKEN))
+                .thenReturn(hearingResponse);
 
             HearingManagementController controller = new HearingManagementController(hearingManagementService,
                                                                                      accessControlService,
-                                                                                     applicationParams);
-            controller.saveHearing(null, hearingRequest);
-            verify(hearingManagementService, times(1)).saveHearingRequest(any(), any());
+                                                                                     applicationParams,
+                                                                                     securityUtils);
+            controller.saveHearing(null, CLIENT_S2S_TOKEN, hearingRequest);
+            verify(hearingManagementService, times(1)).saveHearingRequest(any(), any(), any());
         }
 
         @Test
@@ -104,13 +130,15 @@ class HearingManagementControllerTest {
             hearingRequest.setCaseDetails(null);
 
             HearingResponse hearingResponse = generateHearingResponse();
-            when(hearingManagementService.saveHearingRequest(hearingRequest, null)).thenReturn(hearingResponse);
+            when(hearingManagementService.saveHearingRequest(hearingRequest, null, CLIENT_S2S_TOKEN))
+                .thenReturn(hearingResponse);
 
             HearingManagementController controller = new HearingManagementController(hearingManagementService,
                                                                                      accessControlService,
-                                                                                     applicationParams);
-            controller.saveHearing(null, hearingRequest);
-            verify(hearingManagementService, times(1)).saveHearingRequest(any(),any());
+                                                                                     applicationParams,
+                                                                                     securityUtils);
+            controller.saveHearing(null, CLIENT_S2S_TOKEN,hearingRequest);
+            verify(hearingManagementService, times(1)).saveHearingRequest(any(),any(), any());
         }
 
         @Test
@@ -119,13 +147,14 @@ class HearingManagementControllerTest {
             HearingRequest hearingRequest = generateHearingRequest(false);
 
             HearingResponse hearingResponse = generateHearingResponse();
-            when(hearingManagementService.saveHearingRequest(hearingRequest, null)).thenReturn(hearingResponse);
+            when(hearingManagementService.saveHearingRequest(hearingRequest, null, CLIENT_S2S_TOKEN))
+                .thenReturn(hearingResponse);
 
             HearingManagementController controller = new HearingManagementController(hearingManagementService,
                                                                                      accessControlService,
-                                                                                     applicationParams);
-            controller.saveHearing(null, hearingRequest);
-            verify(hearingManagementService, times(1)).saveHearingRequest(any(), any());
+                                                                                     applicationParams, securityUtils);
+            controller.saveHearing(null, CLIENT_S2S_TOKEN, hearingRequest);
+            verify(hearingManagementService, times(1)).saveHearingRequest(any(), any(), any());
         }
 
 
@@ -135,13 +164,14 @@ class HearingManagementControllerTest {
             HearingRequest hearingRequest = generateHearingRequest(true);
 
             HearingResponse hearingResponse = generateHearingResponse();
-            when(hearingManagementService.saveHearingRequest(hearingRequest, null)).thenReturn(hearingResponse);
+            when(hearingManagementService.saveHearingRequest(hearingRequest, null, CLIENT_S2S_TOKEN))
+                .thenReturn(hearingResponse);
 
             HearingManagementController controller = new HearingManagementController(hearingManagementService,
                                                                                      accessControlService,
-                                                                                     applicationParams);
-            controller.saveHearing(null, hearingRequest);
-            verify(hearingManagementService, times(1)).saveHearingRequest(any(), any());
+                                                                                     applicationParams, securityUtils);
+            controller.saveHearing(null, CLIENT_S2S_TOKEN, hearingRequest);
+            verify(hearingManagementService, times(1)).saveHearingRequest(any(), any(), any());
         }
 
         @Test
@@ -153,13 +183,15 @@ class HearingManagementControllerTest {
 
             HearingResponse hearingResponse = new HearingResponse();
             hearingResponse.setHearingRequestId(1L);
-            when(hearingManagementService.saveHearingRequest(hearingRequest, null)).thenReturn(hearingResponse);
+            when(hearingManagementService.saveHearingRequest(hearingRequest, null, CLIENT_S2S_TOKEN))
+                .thenReturn(hearingResponse);
             HearingManagementController controller = new HearingManagementController(hearingManagementService,
                                                                                      accessControlService,
-                                                                                     applicationParams);
-            controller.saveHearing(null, hearingRequest);
+                                                                                     applicationParams, securityUtils);
+            controller.saveHearing(null, CLIENT_S2S_TOKEN, hearingRequest);
             InOrder orderVerifier = Mockito.inOrder(hearingManagementService);
-            orderVerifier.verify(hearingManagementService).saveHearingRequest(hearingRequest, null);
+            orderVerifier.verify(hearingManagementService).saveHearingRequest(hearingRequest, null,
+                                                                              CLIENT_S2S_TOKEN);
             verifyNoMoreInteractions(hearingManagementService);
         }
     }
@@ -171,7 +203,8 @@ class HearingManagementControllerTest {
         void shouldReturn204_whenRequestIdIsValid() {
             HearingManagementController controller = new HearingManagementController(hearingManagementService,
                                                                                      accessControlService,
-                                                                                     applicationParams);
+                                                                                     applicationParams,
+                                                                                     securityUtils);
             controller.getHearing(1234L, true);
             verify(hearingManagementService, times(1)).getHearingRequest(any(), anyBoolean());
         }
@@ -180,7 +213,8 @@ class HearingManagementControllerTest {
         void shouldReturn200_whenRequestIdIsValid() {
             HearingManagementController controller = new HearingManagementController(hearingManagementService,
                                                                                      accessControlService,
-                                                                                     applicationParams);
+                                                                                     applicationParams,
+                                                                                     securityUtils);
             controller.getHearing(1234L, false);
             verify(hearingManagementService, times(1)).getHearingRequest(any(), anyBoolean());
         }
@@ -192,12 +226,13 @@ class HearingManagementControllerTest {
         @Test
         void shouldReturn200_whenDeleteRequestIdIsValid() {
             doReturn(TestingUtil.deleteHearingResponse()).when(hearingManagementService)
-                .deleteHearingRequest(any(), any());
+                .deleteHearingRequest(any(), any(), any());
             HearingManagementController controller = new HearingManagementController(hearingManagementService,
                                                                                      accessControlService,
-                                                                                     applicationParams);
-            controller.deleteHearing(1234L, TestingUtil.deleteHearingRequest());
-            verify(hearingManagementService, times(1)).deleteHearingRequest(any(), any());
+                                                                                     applicationParams,
+                                                                                     securityUtils);
+            controller.deleteHearing(1234L, CLIENT_S2S_TOKEN, TestingUtil.deleteHearingRequest());
+            verify(hearingManagementService, times(1)).deleteHearingRequest(any(), any(), any());
         }
 
         @Test
@@ -206,13 +241,14 @@ class HearingManagementControllerTest {
             request.setCancellationReasonCodes(List.of(""));
 
             HearingResponse hearingResponse = generateHearingResponse();
-            when(hearingManagementService.deleteHearingRequest(any(), any())).thenReturn(hearingResponse);
+            when(hearingManagementService.deleteHearingRequest(any(), any(), any())).thenReturn(hearingResponse);
 
             HearingManagementController controller = new HearingManagementController(hearingManagementService,
                                                                                      accessControlService,
-                                                                                     applicationParams);
-            controller.deleteHearing(1234L, request);
-            verify(hearingManagementService, times(1)).deleteHearingRequest(any(), any());
+                                                                                     applicationParams,
+                                                                                     securityUtils);
+            controller.deleteHearing(1234L, CLIENT_S2S_TOKEN, request);
+            verify(hearingManagementService, times(1)).deleteHearingRequest(any(), any(), any());
         }
     }
 
@@ -227,11 +263,11 @@ class HearingManagementControllerTest {
                 .getHearings(any(), any());
             HearingManagementController controller = new HearingManagementController(hearingManagementService,
                                                                                      accessControlService,
-                                                                                     applicationParams);
+                                                                                     applicationParams,securityUtils);
             GetHearingsResponse hearingRequest = controller.getHearings(validCaseRef, null);
             verify(hearingManagementService, times(1)).getHearings(any(), any());
-            assertEquals(hearingRequest.getCaseRef(), validCaseRef);
-            assertTrue(hearingRequest.getCaseHearings().get(0).getHearingIsLinkedFlag());
+            assertThat(hearingRequest.getCaseRef()).isEqualTo(validCaseRef);
+            assertThat(hearingRequest.getCaseHearings().getFirst().getHearingIsLinkedFlag()).isTrue();
         }
 
         @Test
@@ -244,15 +280,16 @@ class HearingManagementControllerTest {
             List<String> rolesRequired = Lists.newArrayList(HEARING_VIEWER, LISTED_HEARING_VIEWER);
             List<String> filteredRoleAssignments = Lists.newArrayList(LISTED_HEARING_VIEWER);
 
-            doReturn(filteredRoleAssignments).when(accessControlService).verifyCaseAccess(validCaseRef, rolesRequired);
+            doReturn(filteredRoleAssignments).when(accessControlService).verifyCaseAccess(validCaseRef, rolesRequired,
+                                                                                          null);
             HearingManagementController controller = new HearingManagementController(hearingManagementService,
                                                                                      accessControlService,
-                                                                                     applicationParams);
+                                                                                     applicationParams, securityUtils);
             GetHearingsResponse hearingRequest = controller.getHearings(validCaseRef, null);
             verify(hearingManagementService, times(1)).getHearings(validCaseRef, "LISTED");
-            assertEquals(hearingRequest.getCaseRef(), validCaseRef);
-            assertEquals(hearingRequest.getCaseHearings().get(0).getHmcStatus(), "LISTED");
-            assertTrue(hearingRequest.getCaseHearings().get(0).getHearingIsLinkedFlag());
+            assertThat(hearingRequest.getCaseRef()).isEqualTo(validCaseRef);
+            assertThat(hearingRequest.getCaseHearings().getFirst().getHmcStatus()).isEqualTo("LISTED");
+            assertThat(hearingRequest.getCaseHearings().getFirst().getHearingIsLinkedFlag()).isTrue();
         }
 
         @Test
@@ -264,11 +301,11 @@ class HearingManagementControllerTest {
                 .getEmptyHearingsResponse(any());
             HearingManagementController controller = new HearingManagementController(hearingManagementService,
                                                                                      accessControlService,
-                                                                                     applicationParams);
+                                                                                     applicationParams, securityUtils);
             GetHearingsResponse hearingRequest = controller.getHearings(validCaseRef, status);
             verify(hearingManagementService, times(1)).getEmptyHearingsResponse(validCaseRef);
-            assertEquals(hearingRequest.getCaseRef(), validCaseRef);
-            assertTrue(hearingRequest.getCaseHearings().get(0).getHearingIsLinkedFlag());
+            assertThat(hearingRequest.getCaseRef()).isEqualTo(validCaseRef);
+            assertThat(hearingRequest.getCaseHearings().getFirst().getHearingIsLinkedFlag()).isTrue();
         }
     }
 
@@ -280,16 +317,17 @@ class HearingManagementControllerTest {
             final long hearingId = 2000000000L;
             UpdateHearingRequest hearingRequest = generateUpdateHearingRequest(false);
             HearingResponse hearingResponse = generateHearingResponse();
-            when(hearingManagementService.updateHearingRequest(hearingId, hearingRequest, ""))
+            when(hearingManagementService.updateHearingRequest(hearingId, hearingRequest, "",
+                                                               CLIENT_S2S_TOKEN))
                     .thenReturn(hearingResponse);
 
             HearingManagementController controller = new HearingManagementController(hearingManagementService,
                                                                                      accessControlService,
-                                                                                     applicationParams);
-            controller.updateHearing("",hearingRequest, hearingId);
+                                                                                     applicationParams, securityUtils);
+            controller.updateHearing("",hearingRequest,CLIENT_S2S_TOKEN,  hearingId);
             InOrder orderVerifier = Mockito.inOrder(hearingManagementService);
             orderVerifier.verify(hearingManagementService).updateHearingRequest(hearingId, hearingRequest,
-                                                                                "");
+                                                                                "", CLIENT_S2S_TOKEN);
             verifyNoMoreInteractions(hearingManagementService);
         }
 
@@ -298,16 +336,17 @@ class HearingManagementControllerTest {
             final long hearingId = 2000000000L;
             UpdateHearingRequest hearingRequest = generateUpdateHearingRequest(true);
             HearingResponse hearingResponse = generateHearingResponse();
-            when(hearingManagementService.updateHearingRequest(hearingId, hearingRequest, ""))
+            when(hearingManagementService.updateHearingRequest(hearingId, hearingRequest, "",
+                                                               CLIENT_S2S_TOKEN))
                 .thenReturn(hearingResponse);
 
             HearingManagementController controller = new HearingManagementController(hearingManagementService,
                                                                                      accessControlService,
-                                                                                     applicationParams);
-            controller.updateHearing("", hearingRequest, hearingId);
+                                                                                     applicationParams, securityUtils);
+            controller.updateHearing("", hearingRequest, CLIENT_S2S_TOKEN, hearingId);
             InOrder orderVerifier = Mockito.inOrder(hearingManagementService);
             orderVerifier.verify(hearingManagementService).updateHearingRequest(hearingId, hearingRequest,
-                                                                                "");
+                                                                                "", CLIENT_S2S_TOKEN);
             verifyNoMoreInteractions(hearingManagementService);
         }
     }
@@ -321,10 +360,10 @@ class HearingManagementControllerTest {
             final long hearingId = 2000000000L;
             HearingManagementController controller = new HearingManagementController(hearingManagementService,
                                                                                      accessControlService,
-                                                                                     applicationParams);
-            controller.hearingCompletion(hearingId);
+                                                                                     applicationParams, securityUtils);
+            controller.hearingCompletion(hearingId, CLIENT_S2S_TOKEN);
             InOrder orderVerifier = Mockito.inOrder(hearingManagementService);
-            orderVerifier.verify(hearingManagementService).hearingCompletion(hearingId);
+            orderVerifier.verify(hearingManagementService).hearingCompletion(hearingId, CLIENT_S2S_TOKEN);
         }
     }
 
@@ -334,37 +373,52 @@ class HearingManagementControllerTest {
         @Test
         void shouldReturnHearingResponseForListed() {
             List<String> ccdCaseRefs  = List.of("9372710950276233");
-            doReturn(TestingUtil.getHearingsResponseWhenDataIsPresent(ccdCaseRefs.get(0), "LISTED"))
+            DataStoreCaseDetails caseDetails = DataStoreCaseDetails.builder()
+                .id("9372710950276233")
+                .jurisdiction("CMC")
+                .build();
+            List<DataStoreCaseDetails> cases = List.of(caseDetails);
+            doReturn(TestingUtil.getHearingsResponseWhenDataIsPresent(ccdCaseRefs.getFirst(),
+                                                                      HearingStatus.LISTED.name()))
                 .when(hearingManagementService)
                 .getHearings(any(), any());
+            doReturn(cases).when(hearingManagementService).getCaseSearchResults(any(), any(), any());
             HearingManagementController controller = new HearingManagementController(
                 hearingManagementService,
                 accessControlService,
-                applicationParams
+                applicationParams, securityUtils
             );
-            List<GetHearingsResponse> hearingsResponseList = controller.getHearingsForListOfCases(ccdCaseRefs, null);
+            List<GetHearingsResponse> hearingsResponseList = controller.getHearingsForListOfCases(ccdCaseRefs,
+                                                               null,"AAT_PRIVATE");
             verify(hearingManagementService, times(1)).getHearings(any(), any());
-            assertEquals(hearingsResponseList.get(0).getCaseRef(), ccdCaseRefs.get(0));
-            assertTrue(hearingsResponseList.get(0).getCaseHearings().get(0).getHearingIsLinkedFlag());
+            assertThat(hearingsResponseList.getFirst().getCaseRef()).isEqualTo(ccdCaseRefs.getFirst());
+            assertThat(hearingsResponseList.getFirst().getCaseHearings().getFirst().getHearingIsLinkedFlag()).isTrue();
         }
 
         @Test
         void shouldReturnHearingResponseForListOfCases() {
             List<String> ccdCaseRefs  = List.of("9372710950276233", "9856815055686759");
-            for (String ccdCaseRef : ccdCaseRefs) {
-                doReturn(TestingUtil.getHearingsResponseWhenDataIsPresent(ccdCaseRef, null))
+            DataStoreCaseDetails caseDetails = DataStoreCaseDetails.builder()
+                .id("9856815055686759")
+                .jurisdiction("CMC")
+                .build();
+            List<DataStoreCaseDetails> cases = List.of(caseDetails);
+            doReturn(cases).when(hearingManagementService).getCaseSearchResults(any(), any(), any());
+            for (DataStoreCaseDetails dataStoreCaseDetails : cases) {
+                doReturn(TestingUtil.getHearingsResponseWhenDataIsPresent(dataStoreCaseDetails.getId(), null))
                     .when(hearingManagementService)
                     .getHearings(any(), any());
             }
             HearingManagementController controller = new HearingManagementController(
                 hearingManagementService,
                 accessControlService,
-                applicationParams
+                applicationParams, securityUtils
             );
-            List<GetHearingsResponse> hearingsResponseList = controller.getHearingsForListOfCases(ccdCaseRefs, null);
-            verify(hearingManagementService, times(2)).getHearings(any(), any());
-            assertEquals(hearingsResponseList.get(0).getCaseRef(), ccdCaseRefs.get(1));
-            assertTrue(hearingsResponseList.get(0).getCaseHearings().get(0).getHearingIsLinkedFlag());
+            List<GetHearingsResponse> hearingsResponseList = controller.getHearingsForListOfCases(ccdCaseRefs,
+                                                                                 null, "AAT_PRIVATE");
+            verify(hearingManagementService, times(1)).getHearings(any(), any());
+            assertThat(hearingsResponseList.getFirst().getCaseRef()).isEqualTo(ccdCaseRefs.get(1));
+            assertThat(hearingsResponseList.getFirst().getCaseHearings().getFirst().getHearingIsLinkedFlag()).isTrue();
         }
     }
 
